--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,3 +65,42 @@
 #logo:active:after {
   opacity: 0;
 }
+
+.dummy {
+  font-family: Trebuchet MS,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Tahoma,sans-serif; 
+  float: right;
+  position: relative;
+  margin-top: 130px;
+  width: 700px;
+  padding-bottom: 100px; 
+}
+
+.dummy h1 {
+  font-size: 28px;
+}
+
+#contact {
+  float: right;
+  position: relative;
+}
+
+nav {
+  float: right;
+  position: relative;
+}
+
+#scroll {
+  float: right;
+  position: relative;
+}
+
+button {
+  font-family: Trebuchet MS,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Tahoma,sans-serif;
+  font-size: 18px; 
+  border-radius: 5px;
+  border-color: rgb(48, 49, 54);
+  width: 280px;
+  padding: 10px;
+  color: white;
+  background-color: rgb(48, 49, 54);
+}
