--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,7 +70,7 @@
   font-family: Trebuchet MS,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Tahoma,sans-serif; 
   float: right;
   position: relative;
-  margin-top: 130px;
+  margin-top: 150px;
   width: 700px;
   padding-bottom: 100px; 
 }
@@ -103,4 +103,13 @@ button {
   padding: 10px;
   color: white;
   background-color: rgb(48, 49, 54);
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+ul li a {
+  color: rgb(48, 49, 54);
 }
