--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,8 +108,14 @@ button {
 ul {
   list-style: none;
   padding: 0;
+  margin: 0;
+  width: 300px;
+  overflow: hidden;
 }
 
-ul li a {
+li a {
+  display: block;
+  float: left;
+  margin-right: 10px;
   color: rgb(48, 49, 54);
 }
