--- a/public/css/style.css
+++ b/public/css/style.css
@@ -206,41 +206,49 @@ body {
   background-image: url("../img/background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: cover; }
+  background-size: cover;
+  color: #000;
+  font-family: Trebuchet MS,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Tahoma,sans-serif; }
 
 .logo {
   float: right;
   position: relative;
-  width: 150px;
-  margin-top: -30px;
-  margin-right: 10px;
-  overflow: hidden;
-  -moz-box-shadow: 0 0 20px black;
-  -webkit-box-shadow: 0 0 20px black;
-  box-shadow: 0 0 20px black; }
-  .logo:after {
-    content: "";
-    position: absolute;
-    top: -110%;
-    left: -210%;
-    width: 200%;
-    height: 200%;
-    opacity: 0;
-    transform: rotate(30deg);
-    background: rgba(255, 255, 255, 0.13);
-    background: linear-gradient(to right, rgba(255, 255, 255, 0.13) 0%, rgba(255, 255, 255, 0.13) 77%, rgba(255, 255, 255, 0.5) 92%, rgba(255, 255, 255, 0) 100%); }
-  .logo:hover:after {
-    opacity: 1;
-    top: -30%;
-    left: -30%;
-    transition-property: left, top, opacity;
-    transition-duration: 0.7s, 0.7s, 0.15s;
-    transition-timing-function: ease; }
-  .logo:active:after {
-    opacity: 0; }
+  width: 10em; }
+
+.wrap {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%;
+  padding: 0px 60px; }
+  .wrap:last-child {
+    margin-right: 0; }
+
+.popout {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 48.82117%;
+  background-color: #9e99dc;
+  display: none;
+  min-height: 500px;
+  opacity: 0.8;
+  float: left; }
+  .popout:last-child {
+    margin-right: 0; }
+
+.content {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 48.82117%;
+  float: right;
+  min-height: 500px;
+  opacity: 0.8; }
+  .content:last-child {
+    margin-right: 0; }
 
 button {
-  font-family: Trebuchet MS,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Tahoma,sans-serif;
   font-size: 18px;
   border-radius: 5px;
   border-color: #303136;
