--- a/public/css/style.css
+++ b/public/css/style.css
@@ -220,7 +220,7 @@ body {
   display: block;
   margin-right: 2.35765%;
   width: 100%;
-  padding: 0px 60px; }
+  padding: 0px 100px; }
   .wrap:last-child {
     margin-right: 0; }
 
@@ -230,12 +230,18 @@ body {
   margin-right: 2.35765%;
   width: 48.82117%;
   background-color: #9e99dc;
-  display: none;
   min-height: 500px;
-  opacity: 0.8;
-  float: left; }
+  opacity: 0;
+  -webkit-transition: .5s;
+  -moz-transition: .5s;
+  -o-transition: .5s;
+  -ms-transition: .5s;
+  transition: .5s; }
   .popout:last-child {
     margin-right: 0; }
+
+.popout-img:hover .popout {
+  opacity: 1; }
 
 .content {
   float: left;
@@ -254,7 +260,6 @@ button {
   border-color: #303136;
   width: 280px;
   padding: 10px;
-  color: white;
-  background-color: #303136; }
+  color: white; }
 
 /*# sourceMappingURL=style.css.map */
