--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,9 +195,10 @@ hr {
 .tab-link {
   border-bottom: 1px solid #ddd;
   display: inline-block;
-  padding: 0.75em; }
+  padding: 0.75em;
+  color: #000; }
   .tab-link[aria-selected="true"] {
-    box-shadow: inset 0 -3px #1565c0; }
+    box-shadow: inset 0 -3px #000; }
 
 .tab-panel[aria-hidden="true"] {
   display: none; }
