--- a/public/scss/1-modules/tabs.scss
+++ b/public/scss/1-modules/tabs.scss
@@ -1,3 +1,5 @@
+$tab-link-color: #000;
+
 .tab-list {
   display: flex;
   margin-bottom: $base-spacing;
@@ -7,9 +9,10 @@
   border-bottom: $base-border;
   display: inline-block;
   padding: $small-spacing;
+  color: $tab-link-color;
 
   &[aria-selected="true"] {
-    box-shadow: inset 0 -3px $action-color;
+    box-shadow: inset 0 -3px $tab-link-color;
   }
 }
 
