--- a/public/css/style.css
+++ b/public/css/style.css
@@ -259,18 +259,19 @@ button {
   float: left;
   display: block;
   margin-right: 2.35765%;
-  width: 31.76157%; }
+  width: 40.29137%; }
   .bitmoji:last-child {
     margin-right: 0; }
   .bitmoji img {
     border-radius: 10px;
-    height: 23em; }
+    height: 100%;
+    width: 100%; }
 
 .home-info {
   float: left;
   display: block;
   margin-right: 2.35765%;
-  width: 65.88078%; }
+  width: 57.35098%; }
   .home-info:last-child {
     margin-right: 0; }
   .home-info p {
