Adjust tab font size

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -300,4 +300,7 @@ button {
     line-height: 2em;
     font-size: 30px; }
 
+.tab-list {
+  font-size: 24px; }
+
 /*# sourceMappingURL=style.css.map */
