--- a/public/scss/2-layouts/layout.scss
+++ b/public/scss/2-layouts/layout.scss
@@ -66,8 +66,6 @@ button {
   @include span-columns(8 of 12);
 
   .title {
-    // border: solid 1px red;
-    // font-family: 'Cabin', sans-serif;
     font-family: 'Merienda', cursive;
     font-size: 50px;
     padding-top: 0.5em;
@@ -78,12 +76,14 @@ button {
 
 .home-info {
   @include span-columns(12 of 12);
-   // border: solid 1px red;
+  
   p {
-    // padding-top: 7.5em;
     padding-right: 4em;
     line-height: 2em;
     font-size: 30px;
   }
+}
 
+.tab-list {
+  font-size: 24px;
 }
